outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_23-14-52/evaluations/problem_eval3039746469543967785_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance via a combined centrality metric (60% degree, 40% path), and employs a distance-weighted probability distribution for candidate selection, where nodes with higher centrality and shorter distances are favored more aggressively.}
                                                                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance via a combined centrality metric (60% degree, 40% path), and employs a distance-weighted probability distribution for candidate selection, where nodes with higher centrality and shorter distances are favored more aggressively.}
                                                                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'
